--- a/style.css
+++ b/style.css
@@ -136,8 +136,14 @@ footer a {
 
 /* Texto da turma */
 .header-text {
-  text-align: left;
+  text-align: center;
+  display: flex;
+    
+    justify-content: center; 
+    align-items: center;
 }
+
+
 header h1 {
   margin: 0;
   font-size: 2.5rem;
